--- a/cncmix.cabal
+++ b/cncmix.cabal
@@ -19,6 +19,7 @@ library
                      Codec.Archive.CnCMix.TiberianDawn,
                      Codec.Archive.CnCMix.RedAlert.Normal, Codec.Archive.CnCMix.RedAlert.Checksummed, Codec.Archive.CnCMix.RedAlert.Encrypted
   build-depends:     base ==4.5.*, containers ==0.4.*, filepath ==1.3.*, directory ==1.1.*, cmdlib ==0.3.*, bytestring ==0.9.*, binary ==0.5.*, QuickCheck ==2.4.*, HTF == 0.10.*
+  default-language:  Haskell2010
 
 executable cncmix
   if flag(executable)
@@ -27,6 +28,7 @@ executable cncmix
     Buildable:       False
   main-is:           Main.hs
   build-depends:     base ==4.5.*, containers ==0.4.*, filepath ==1.3.*, directory ==1.1.*, cmdlib ==0.3.*, bytestring ==0.9.*, binary ==0.5.*, QuickCheck ==2.4.*, HTF == 0.10.*
+  default-language:  Haskell2010
 
 test-suite sample-tests
   type:              exitcode-stdio-1.0
@@ -35,3 +37,4 @@ test-suite sample-tests
                      Codec.Archive.CnCMix.TiberianDawn,
                      Codec.Archive.CnCMix.RedAlert.Normal, Codec.Archive.CnCMix.RedAlert.Checksummed, Codec.Archive.CnCMix.RedAlert.Encrypted
   build-depends:     base ==4.5.*, containers ==0.4.*, filepath ==1.3.*, directory ==1.1.*, cmdlib ==0.3.*, bytestring ==0.9.*, binary ==0.5.*, QuickCheck ==2.4.*, HTF == 0.10.*
+  default-language:  Haskell2010
